--- a/MLtool/makefile
+++ b/MLtool/makefile
@@ -1,5 +1,9 @@
 .PHONY: clean
-OBJS = MLtool.so
-cc = gcc
-CFLAGS = -wall -O2 -g
+CXX = mpic++
+TARGET = Kmeans
+LIB_FLAGS = /home/septicmk/lib/lib/libboost_serialization.so /home/septicmk/lib/lib/libboost_mpi.so
+all: 
+	$(CXX) Kmeans.cpp $(LIB_FLAGS) -o $(TARGET)
+clean:
+	-rm -f *.o $(TARGET)
 
